feat: initialize kiro spec-driven development framework
- Add kiro commands for spec management (init, requirements, design, tasks, impl, status)
- Add validation tools (gap analysis, design review, implementation validation)
- Add steering management (core steering and custom steering templates)
- Add comprehensive rule templates (EARS format, design principles, task generation)
- Add spec templates (design, requirements, tasks, research)
- Configure Husky pre-commit hooks with lint-staged
- Set up Claude AI configuration and MCP server integration
- Initialize database schema with Drizzle ORM (Supabase/PostgreSQL)
- Add VSCode workspace settings and Biome configuration

--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "build": "next build",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx,json}": [
+      "biome check --write --no-errors-on-unmatched"
+    ]
   },
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.81.1",
+    "drizzle-orm": "^0.44.7",
     "next": "16.0.1",
+    "postgres": "^3.4.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -22,6 +34,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.7",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
